[package]
name = "proxy"
version = "0.1.0"
authors = ["George Hahn <george.hahn@smartthings.com>"]
edition = "2018"

# TODO: Trim deps; this list has just about everything possible for airplane mode
[dependencies]
futures-util = { version = "0.3"}
futures = { version = "0.3"}
config = { version = "0.10", features = ["toml"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
serde_derive = "1.0"
serde = "1.0"
bytes = "0.5"
redis = "0.15"

statsd = "0.13"
http = "0.2"
headers = "0.3"
h2 = "0.2"
tokio-util = "0.2"
tracing = "0.1"
etcd-rs = "0.2"
async-trait = "0.1.24"
cdrs = "2.2"
slog = "2.5"
pretty_env_logger = "0.4"
log = "0.4"
toml = "0.5"

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "my_benchmark"
#harness = false

# Not (yet) upstreamed API improvements to the etcd-rs crate
[patch.crates-io]
etcd-rs = { git = "https://github.com/GeorgeHahn/etcd-rs", branch = "less-verbose-api" }

# Add debug symbols to release builds
[profile.release]
debug = true
